--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.38.0",
-    "aws-cdk": "1.38.0",
+    "aws-cdk": "^1.38.0",
     "jest": "^25.5.0"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@aws-cdk/aws-sns": "1.38.0",
     "@aws-cdk/aws-sns-subscriptions": "1.38.0",
     "@aws-cdk/aws-sqs": "1.38.0",
+    "@aws-cdk/cdk": "^0.36.1",
     "@aws-cdk/core": "1.38.0"
   }
 }
